[SL-120] - Product subpages

--- a/package.json
+++ b/package.json
@@ -20,53 +20,44 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.x",
-    "@fortawesome/free-brands-svg-icons": "5.3.x",
-    "@fortawesome/free-regular-svg-icons": "5.3.x",
-    "@fortawesome/free-solid-svg-icons": "5.3.x",
+    "@fortawesome/free-brands-svg-icons": "5.5.x",
+    "@fortawesome/free-regular-svg-icons": "5.5.x",
+    "@fortawesome/free-solid-svg-icons": "5.5.x",
     "@fortawesome/react-fontawesome": "0.1.x",
     "classnames": "2.2.x",
-    "netlify-cms": "^2.1.2",
-    "netlify-cms-widget-fontawesome": "^3.1.0",
-    "netlify-identity-widget": "^1.4.14",
-    "react": "16.5.x",
-    "react-particles-js": "2.4.0-beta.8",
-    "react-static": "5.9.x",
-    "tailwindcss": "0.6.x"
+    "netlify-cms": "2.2.0",
+    "netlify-cms-widget-fontawesome": "3.1.0",
+    "netlify-identity-widget": "1.4.14",
+    "react": "16.6.x",
+    "react-particles-js": "2.4.0-beta.10",
+    "react-static": "5.9.12",
+    "tailwindcss": "0.7.x"
   },
   "devDependencies": {
-    "@types/node": "^10.11.3",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8",
-    "autoprefixer": "9.1.x",
-    "babel-core": "6.26.x",
-    "babel-eslint": "10.0.x",
-    "babel-loader": "8.0.x",
-    "babel-preset-env": "1.7.x",
+    "@types/node": "^10.12.8",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "autoprefixer": "9.3.x",
     "chokidar": "2.0.x",
     "css-loader": "1.0.x",
-    "eslint": "5.x.x",
-    "eslint-config-google": "0.x.x",
-    "eslint-config-prettier": "3.x.x",
-    "eslint-config-stoplight": "2.x.x",
-    "eslint-plugin-prettier": "2.x.x",
-    "eslint-plugin-react": "7.x.x",
     "extract-text-webpack-plugin": "3.0.x",
-    "front-matter": "2.3.x",
+    "front-matter": "3.0.x",
     "js-yaml": "3.12.0",
     "klaw": "3.0.x",
     "markdown-it": "8.4.x",
     "markdown-it-task-checkbox": "1.0.x",
     "markdown-it-video": "0.6.x",
-    "node-sass": "4.9.x",
+    "node-sass": "4.10.x",
     "postcss": "7.0.x",
     "postcss-flexbugs-fixes": "4.1.x",
     "postcss-loader": "3.0.x",
-    "prettier": "1.14.x",
+    "prettier": "1.15.x",
     "prismjs": "1.15.x",
+    "react-hot-loader": "^4.3.12",
     "sass-loader": "7.1.x",
-    "serve": "10.0.x",
+    "serve": "10.1.x",
     "style-loader": "0.23.x",
-    "ts-loader": "3.5.x",
-    "typescript": "2.7.x"
+    "ts-loader": "5.3.x",
+    "typescript": "3.1.x"
   }
 }
