--- a/netlify/pages/about.yaml
+++ b/netlify/pages/about.yaml
@@ -13,42 +13,24 @@ team:
   - image: /images/barnett_headshot.png
     name: Taylor Barnett
     role: Community Engineer
-    link:
-      title: '@taylor_atx'
-      href: 'https://twitter.com/@taylor_atx'
   - image: /images/cassera_headshot.png
     name: Nicholas Cassera
     role: Software Engineer
   - image: /images/chianese_headshot.png
     name: Vincenzo Chianese
     role: Software Engineer
-    link:
-      title: '@d3dvincent'
-      href: 'https://twitter.com/@d3dvincent'
   - image: /images/faust_headshot.png
     name: Scott Faust
     role: Growth & Ops
-    link:
-      title: '@smf434'
-      href: 'https://twitter.com/@smf434'
   - image: /images/hilton_headshot.png
     name: William Hilton
     role: Software Engineer
-    link:
-      title: '@wmhilton'
-      href: 'https://twitter.com/@wmhilton'
   - image: /images/lott_headshot.png
     name: Chris Lott
     role: Software Engineer
-    link:
-      title: '@ChrisNLott'
-      href: 'https://twitter.com/@ChrisNLott'
   - image: /images/macleod_headshot.png
     name: Marc MacLeod
     role: Founder & CEO
-    link:
-      title: '@marbemac'
-      href: 'https://twitter.com/@marbemac'
   - image: /images/mcdonald_headshot.png
     name: Ross Mcdonald
     role: Sales Engineer
@@ -58,21 +40,27 @@ team:
   - image: /images/pytleski_headshot.png
     name: Thomas Pytleski
     role: Software Engineer
-    link:
-      title: '@pytlesk4'
-      href: 'https://twitter.com/@pytlesk4'
   - image: /images/rock_headshot.png
     name: Brian Rock
     role: Director of Engineering
-    link:
-      title: '@brianmrock'
-      href: 'https://twitter.com/@brianmrock'
   - image: /images/tharp_headshot.png
     name: Duane Tharp
     role: Sales & Partnerships
   - image: /images/wallach_headshot.png
     name: Robert Wallach
     role: Content & Support
+  - image: /images/chelsea-hohmann-headshot.jpg
+    name: Chelsea Hohmann
+    role: Software Engineer
+  - image: /images/jakub-rozek-headshot.jpg
+    name: Jakub Rozek
+    role: Software Engineer
+  - image: /images/carol-maciaszek-headshot.png
+    name: Karol Maciaszek
+    role: Software Engineer
+  - image: /images/chris-miaskowski-headshot.jpg
+    name: Chris Miaskowski
+    role: Humble Problem Solver
 quotes:
   - author: Evin Callahan
     company: Hudya
