Update Pages “about” (#165)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/pages/about.yaml
+++ b/netlify/pages/about.yaml
@@ -42,7 +42,7 @@ team:
     role: Sales Engineer
   - image: /images/chris-miaskowski-headshot.jpg
     name: Chris Miaskowski
-    role: Humble Problem Solver
+    role: Software Engineer
   - image: /images/team/vazha-omanashvili.png
     name: Vazha Omanashvili
     role: Software Engineer
