feat: product -> landing pages
* fixes admin panel previews
* fixes PR previews
* uses @stoplight/types tsconfig/tslint

--- a/netlify/settings.yaml
+++ b/netlify/settings.yaml
@@ -166,6 +166,7 @@ meta:
     title: Stoplight
     username: '@stoplightio'
   url: 'https://stoplight.io'
+  robots: 'index, follow'
 integrations:
   googleTagManager: GTM-58LWL5P
   hubspot: 4892910
