--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "npm run build.production"
 
 [context.branch-deploy]
-  command = "npm run build.staging"
+  command = "npm run build"
