--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,15 @@
 {
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "build", "scripts", "netlify", "tmp"],
+  "extends": "./node_modules/@stoplight/scripts/tsconfig.json",
+
+  "include": ["src"],
+
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "es6",
-    "target": "ES5",
-    "lib": ["es2015", "es2016", "dom"],
-    "sourceMap": true,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "noFallthroughCasesInSwitch": true,
-    "allowUnreachableCode": false,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "strict": true,
-    "pretty": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "paths": {
       "@components/*": ["./src/components/*"],
       "@containers/*": ["./src/containers/*"],
       "@styles/*": ["./src/styles/*"],
-      "@utils/*": ["./src/utils/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
