--- a/netlify/landings/lp-design.yaml
+++ b/netlify/landings/lp-design.yaml
@@ -1,4 +1,5 @@
 path: /lp/design/
+title: Visual API Designer Landing page
 hero:
   subtitle: >-
     Build first-class APIs with a collaborative, powerful, visual editor that
