--- a/netlify/landings/lp-docs.yaml
+++ b/netlify/landings/lp-docs.yaml
@@ -56,6 +56,8 @@ features:
     title: Simple, Flexible Deployment
     titleURL: /documentation/hosted/
 hubspot:
+  title: Request a demo
+  description: Stoplight on average shows a 36% gain in engineering time and increases quality 30%.
   formId: '7c71a3d0-fcd0-452f-981e-883c6cc86dd3'
   portalId: '4892910'
 customers:
