--- a/netlify/landings/lp-mocking.yaml
+++ b/netlify/landings/lp-mocking.yaml
@@ -45,6 +45,8 @@ features:
       or after traffic reaches your mock server. Write scripts for more complex
       mocking behavior, custom validations, and much more.
 hubspot:
+  title: Request a demo
+  description: Stoplight on average shows a 36% gain in engineering time and increases quality 30%.
   formId: '7c71a3d0-fcd0-452f-981e-883c6cc86dd3'
   portalId: '4892910'
 customers:
