--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "start": "react-static start",
-    "build.production": "RELEASE_STAGE=production react-static build",
-    "build": "react-static build",
+    "build.production": "NODE_ENV=production RELEASE_STAGE=production react-static build",
+    "build": "NODE_ENV=production react-static build",
     "serve": "serve dist -p 3000",
     "format": "prettier --single-quote --trailing-comma es5 --print-width 100 --write \"src/**/*.js\""
   },
