Update Page “pricing” (#177)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/pages/pricing.yaml
+++ b/netlify/pages/pricing.yaml
@@ -13,7 +13,7 @@ plans:
       title: Sign Up
     description: For open source and individual use.
     features:
-      - Unlimited projects
+      - Unlimited public projects
     price: Free
     title: Personal
   - button:
@@ -25,7 +25,7 @@ plans:
       - Up to 25 users
       - Collaboration and discussions
       - Access and role management
-      - Unlimited projects
+      - Unlimited private projects
     price: $24
     title: Team
     unit: / user / month
