feat: add markdown anchors

--- a/package.json
+++ b/package.json
@@ -47,14 +47,13 @@
     "js-yaml": "3.12.0",
     "klaw": "3.0.x",
     "markdown-it": "8.4.x",
-    "markdown-it-task-checkbox": "1.0.x",
+    "markdown-it-anchor": "5.0.x",
     "markdown-it-video": "0.6.x",
     "node-sass": "4.10.x",
     "postcss": "7.0.x",
     "postcss-flexbugs-fixes": "4.1.x",
     "postcss-loader": "3.0.x",
     "prettier": "1.15.x",
-    "prismjs": "1.15.x",
     "react-hot-loader": "^4.3.12",
     "sass-loader": "7.1.x",
     "serve": "10.1.x",
