Update Landing Page “testing” (#194)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/landings/testing.yaml
+++ b/netlify/landings/testing.yaml
@@ -50,7 +50,7 @@ features:
       responses for different status codes match the contract of a connected
       OpenAPI Specification; enabling collaboration over API test coverage
       within your organization.
-    titleURL: /testing/enterprise
+    titleURL: ''
 actionBar:
   buttons:
     - href: 'https://next.stoplight.io/'
