fix(landing): updates netlify landing pages

--- a/netlify/landings/design.yaml
+++ b/netlify/landings/design.yaml
@@ -18,6 +18,10 @@ featureSection:
     any code, model complex APIs faster than ever while simultaneously getting
     feedback on your prototypes with our [hosted mock
     servers](https://stoplight.io/mocking).
+  buttons:
+    - title: Start Designing Now
+      href: 'https://next.stoplight.io/'
+      shadow: md
   features:
     - image: /images/design_quick_start.png
       title: Quick to Start
