--- a/netlify/landings/testing.yaml
+++ b/netlify/landings/testing.yaml
@@ -1,65 +1,69 @@
 path: /testing
 title: OpenAPI Testing
 hero:
-  image: /images/testing_header.png
+  image:
+    src: /images/testing_header.png
+    alt: Testing
   subtitle: >-
     Build reliable web APIs with fully customizable tests and robust test
     coverage based on your API contracts. Test your endpoints, status codes, and
     more.
   title: OpenAPI Testing
 color: orange
-heading: OpenAPI Testing
-description: >-
-  Increase the test coverage of your web APIs so they break less for your
-  consumers online. Create a full collection of tests with Stoplight Testing.
-  Use Environment and Context Variables to reference other complex test
-  scenarios to accelerate test generations and reduce duplication. Whether you
-  are writing test for just one API call or a scenario of API calls working
-  together in a real-life use case, Stoplight Testing gives you the flexibility
-  to make your tests fit you workflow by supporting command line and CI/CD
-  pipeline integrations. Contract Testing your API against your OpenAPI
-  Specification (formerly known as Swagger) or JSON Schema is possible with our
-  simple visual Test Editor.
-cta:
-  href: 'https://next.stoplight.io/'
-  name: Start Testing
-features:
-  - image: /images/testing_automation.png
-    title: Simple Automated API Testing
-    shortName: CI/CD Integration
-    description: >-
-      With our Visual Test Editor, create multi-step test scenarios to automate
-      testing your REST web APIs. Build scenarios by capturing and passing data
-      between test API calls. Then integrate your test scenarios into your
-      existing CI/CD pipeline with our command line tool, powered by Prism.
-    titleURL: /testing/free
-  - image: /images/testing_validation.png
-    title: Contract Testing
-    shortName: Contract Testing
-    description: >-
-      Create test collections that ensure the API implementation meets the
-      standards and definitions described in your OpenAPI Specification or JSON
-      Schema, also known as Contract Testing. Stoplight uses realistic, dynamic
-      data based on your OpenAPI Specification to simulate real-life API
-      consumers across your local development, staging, and production
-      environments complementing your Unit tests.
-    titleURL: /testing/integration
-  - image: /images/testing_reporting.png
-    title: Coverage Reporting
-    shortName: Coverage Reporting
-    description: >-
-      With integrated Contract Testing reporting capabilities, you can track
-      your progress towards 100% coverage. Stoplight verifies that the API
-      responses for different status codes match the contract of a connected
-      OpenAPI Specification; enabling collaboration over API test coverage
-      within your organization.
-    titleURL: ''
-actionBar:
+featureSection:
+  title: OpenAPI Testing
+  description: >-
+    Increase the test coverage of your web APIs so they break less for your
+    consumers online. Create a full collection of tests with Stoplight Testing.
+    Use Environment and Context Variables to reference other complex test
+    scenarios to accelerate test generations and reduce duplication. Whether you
+    are writing test for just one API call or a scenario of API calls working
+    together in a real-life use case, Stoplight Testing gives you the flexibility
+    to make your tests fit you workflow by supporting command line and CI/CD
+    pipeline integrations. Contract Testing your API against your OpenAPI
+    Specification (formerly known as Swagger) or JSON Schema is possible with our
+    simple visual Test Editor.
   buttons:
-    - href: 'https://next.stoplight.io/'
-      title: Get Started
-  enabled: true
-  text: Ready to Start Testing?
+    - title: Start Testing
+      href: 'https://next.stoplight.io/'
+      shadow: md
+  features:
+    - image: /images/testing_automation.png
+      title: Simple Automated API Testing
+      shortName: CI/CD Integration
+      description: >-
+        With our Visual Test Editor, create multi-step test scenarios to automate
+        testing your REST web APIs. Build scenarios by capturing and passing data
+        between test API calls. Then integrate your test scenarios into your
+        existing CI/CD pipeline with our command line tool, powered by Prism.
+      titleURL: /testing/free
+    - image: /images/testing_validation.png
+      title: Contract Testing
+      shortName: Contract Testing
+      description: >-
+        Create test collections that ensure the API implementation meets the
+        standards and definitions described in your OpenAPI Specification or JSON
+        Schema, also known as Contract Testing. Stoplight uses realistic, dynamic
+        data based on your OpenAPI Specification to simulate real-life API
+        consumers across your local development, staging, and production
+        environments complementing your Unit tests.
+      titleURL: /testing/integration
+    - image: /images/testing_reporting.png
+      title: Coverage Reporting
+      shortName: Coverage Reporting
+      description: >-
+        With integrated Contract Testing reporting capabilities, you can track
+        your progress towards 100% coverage. Stoplight verifies that the API
+        responses for different status codes match the contract of a connected
+        OpenAPI Specification; enabling collaboration over API test coverage
+        within your organization.
+      titleURL: ''
+  actionBar:
+    buttons:
+      - href: 'https://next.stoplight.io/'
+        title: Get Started
+    enabled: true
+    text: Ready to Start Testing?
 meta:
   favicon: /images/mark_light_bg.png
   title: Automated REST API Testing | Stoplight
