--- a/netlify/lists/blog-changelog.yaml
+++ b/netlify/lists/blog-changelog.yaml
@@ -1,5 +1,5 @@
-path: /blog
-tag: 'blog'
+path: /blog/changelog
+tag: 'blog-changelog'
 hero:
   subtitle: Discover & Educate
   title: Blog
@@ -12,16 +12,16 @@ hero:
       href: /blog/api-testing
     - title: Changelog
       href: /blog/changelog
+      icon: 'check-circle'
     - title: Archive
       href: /blog
-      icon: check-circle
 actionBar:
   enabled: true
 meta:
   favicon: /images/mark_light_bg.png
-  title: Read Our Blog | Stoplight
+  title: Changelog | Stoplight
   twitter:
-    title: Read Our Blog | Stoplight
+    title: Changelog | Stoplight
     username: '@stoplightio'
 pagination:
   enabled: true
