--- a/netlify/lists/blog-design.yaml
+++ b/netlify/lists/blog-design.yaml
@@ -1,11 +1,12 @@
-path: /blog
-tag: 'blog'
+path: /blog/api-design
+tag: 'blog-design'
 hero:
   subtitle: Discover & Educate
   title: Blog
   buttons:
     - title: API Design
       href: /blog/api-design
+      icon: check-circle
     - title: API Documentation
       href: /blog/api-documentation
     - title: API Testing
@@ -14,14 +15,13 @@ hero:
       href: /blog/changelog
     - title: Archive
       href: /blog
-      icon: check-circle
 actionBar:
   enabled: true
 meta:
   favicon: /images/mark_light_bg.png
-  title: Read Our Blog | Stoplight
+  title: API Design | Stoplight
   twitter:
-    title: Read Our Blog | Stoplight
+    title: API Design | Stoplight
     username: '@stoplightio'
 pagination:
   enabled: true
