--- a/netlify/lists/blog.yaml
+++ b/netlify/lists/blog.yaml
@@ -1,20 +1,20 @@
 path: /blog
 tag: 'blog'
-hero:
-  subtitle: Discover & Educate
-  title: Blog
-  buttons:
-    - title: API Design
-      href: /blog/api-design
-    - title: API Documentation
-      href: /blog/api-documentation
-    - title: API Testing
-      href: /blog/api-testing
-    - title: Changelog
-      href: /blog/changelog
-    - title: Archive
-      href: /blog
-      icon: check-circle
+title: Stoplight API Corner
+subtitle: Musings on API design, testing, documentation, trends, and related technology.
+color: 'purple'
+buttons:
+  - title: API Design
+    href: /blog/api-design
+  - title: API Documentation
+    href: /blog/api-documentation
+  - title: API Testing
+    href: /blog/api-testing
+  - title: Changelog
+    href: /blog/changelog
+  - title: Archive
+    href: /blog
+    icon: check-circle
 actionBar:
   enabled: true
 meta:
