--- a/netlify/authors/taylor-barnett.yaml
+++ b/netlify/authors/taylor-barnett.yaml
@@ -3,10 +3,12 @@ tag: author
 title: Taylor Barnett
 subtitle: >-
   Taylor Barnett is the lead Community Engineer at Stoplight. At Stoplight, she
-  leads Community and Open Source and contributes to Product, Support,
-  Documentation, and Content. She’s passionate about building great developer
-  experiences with an emphasis on empathy and inclusion within APIs,
-  documentation, support, and other community-focused projects.
+  leads Community and Open Source and contributes to Product, Support, and
+  Content. She’s passionate about building great developer experiences with an
+  emphasis on empathy and inclusion within APIs, documentation, support, and
+  other community-focused projects. She has spoken at conferences such as
+  O’Reilly OSCON, API Strategy & Practices, DevXcon, and various local meetups
+  about APIs, developer experience, SDKs, and building developer communities.
 pageName: Community Engineer
 image: /images/barnett_headshot.png
 color: purple-darker
