Update Author “vincenzo-chianese” (#297)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/authors/vincenzo-chianese.yaml
+++ b/netlify/authors/vincenzo-chianese.yaml
@@ -13,9 +13,8 @@ color: red
 buttons:
   - {}
 actionBar:
-  buttons:
-    - color: purple
-  enabled: true
+  buttons: []
+  enabled: false
 meta:
   favicon: /images/mark_light_bg.png
   robots: 'index, follow'
