Update Author “robert-wallach” (#364)
Automatically generated. Merged on Netlify CMS.

--- a/netlify/authors/robert-wallach.yaml
+++ b/netlify/authors/robert-wallach.yaml
@@ -1,6 +1,6 @@
 path: /blog/author/robert-wallach
 tag: Author
-title: 'Robert Wallach '
+title: Robert Wallach
 subtitle: 'details '
 pageName: Content & Support
 image: /images/wallach_headshot.png
